examples/usecase1/rundir-f:::2024-02-13:::17:30:45/output/klee-out-0/test000001.user.err
Error: invalid klee_assume call (provably false)
File: klee_sim.cpp
Line: 193
assembly.ll line: 4322
State: 1
Stack: 
	#000004322 in main() at klee_sim.cpp:193
