examples/usecase1/rundir-f:::2024-02-13:::17:30:45/output/klee-out-0/test000001.kquery
array schedular_queue_size[4] : w32 -> w8 = symbolic
(query [(Eq false
             (Eq 0
                 (And w32 (ZExt w32 (Sle 4
                                         N0:(ReadLSB w32 0 schedular_queue_size)))
                          (ZExt w32 (Slt N0 8)))))]
        false)
